fix: js separated from the html

--- a/src/templates/profile/add_experience.html
+++ b/src/templates/profile/add_experience.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% load i18n %}
+{% load i18n static %}
 <div class="pt-16 pb-10 px-4 sm:px-6 lg:px-8 bg-bg_white"> 
 
     <div class="max-w-7xl mx-auto mb-6 sm:ml-0 lg:ml-40">
@@ -72,42 +72,6 @@
     </div>
 </div>
 
-<script>
-    document.getElementById('experienceForm').addEventListener('submit', function (e) {
-        e.preventDefault(); 
-        document.getElementById('confirmationModal').classList.remove('hidden');
-    });
-
-    document.getElementById('addMore').addEventListener('click', function () {
-        let formData = new FormData(document.getElementById('experienceForm'));
-        
-        fetch("{% url 'add_experience' %}", {
-            method: 'POST',
-            body: formData,
-            headers: {
-                'X-Requested-With': 'XMLHttpRequest',
-            }
-        })
-        .then(response => {
-            if (response.ok) {
-                document.getElementById('confirmationModal').classList.add('hidden'); 
-                document.getElementById('experienceForm').reset(); 
-                document.getElementById('form-container').scrollIntoView({ behavior: 'smooth' });
-            } else {
-                alert('Hubo un error al guardar la experiencia, intenta nuevamente.');
-            }
-        })
-        .catch(error => console.error('Error:', error));
-    });
-
-    document.getElementById('submitForm').addEventListener('click', function () {
-        document.getElementById('confirmationModal').classList.add('hidden'); 
-        document.getElementById('experienceForm').submit(); 
-    });
-
-    document.getElementById('closeModal').addEventListener('click', function () {
-        document.getElementById('confirmationModal').classList.add('hidden');
-    });
-</script>
+<script src="{% static 'js\profile\add_experience.js' %}"></script>
 
 {% endblock %}
