--- a/src/templates/profile/register_company.html
+++ b/src/templates/profile/register_company.html
@@ -183,7 +183,7 @@
         </div>
     </div>
 
-    <div id="confirmationModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+    <div id="confirmationModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden" data-registration-successful="{{ registration_successful|yesno:'true,false' }}">
         <div class="bg-white p-6 rounded-lg shadow-lg w-96">
             <div class="text-center">
                 <svg class="mx-auto h-12 w-12 text-primary_medium mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -199,29 +199,10 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const registrationSuccessful = {{ registration_successful|yesno:"true,false" }};
-            const modal = document.getElementById('confirmationModal');
-            const acceptButton = document.getElementById('acceptButton');
-            const uploadSuccess = document.getElementById('uploadSuccess');
-
-            if (registrationSuccessful === true) {
-                modal.classList.remove('hidden');
-            }
-
-            acceptButton.addEventListener('click', function() {
-                window.location.href = "/dashboard/";
-            });
-
-            document.getElementById('id_photo').addEventListener('change', function () {
-                if (this.files.length > 0) {
-                    uploadSuccess.classList.remove('hidden');
-                    setTimeout(() => {
-                        uploadSuccess.classList.add('hidden');
-                    }, 3000);
-                }
-            });
-        });
+        var registrationSuccessful = {{ registration_successful|yesno:"true,false" }};
     </script>
+
+    <script src="{% static 'js/profile/register_company.js' %}"></script>
+
 </div>
 {% endblock %}
