fix: header config

--- a/src/templates/navigation/top_bar_controls.html
+++ b/src/templates/navigation/top_bar_controls.html
@@ -41,7 +41,7 @@
         </a>
 
         <!-- Configuración -->
-        <a href="/settings"
+        <a href="/settings/account_settings"
            class="p-2 border border-primary_lightest bg-white rounded-full hover:bg-primary_lightest hover:border-primary_medium transition duration-200 ease-in-out">
             {% include "icon/settings.html" with w="24" h="24" %}
         </a>
