feat: advance search bar

--- a/src/templates/navigation/top_bar_controls.html
+++ b/src/templates/navigation/top_bar_controls.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class="flex w-full gap-7 items-center h-12 justify-between">
     <!-- Barra de búsqueda -->
-    <form action="/project/list/" method="GET" class="relative w-full focus:shadow-sm">
+    <form action="/project/list" method="GET" class="relative w-full focus:shadow-sm">
         <div class="flex justify-between w-full bg-white rounded-lg border-primary_lightest border px-2 hover:shadow-sm">
             <!-- Input de búsqueda -->
             <input type="search" name="search" id="default-search"
