--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -3,23 +3,15 @@
 {% load i18n %}
 {% block app_content %}
 <div class="container mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-4">Resultados de la búsqueda</h1>
+    <h1 class="text-2xl font-bold mb-4">{% translate "Resultados de la búsqueda" %}</h1>
 
-    {% if query %}
-        <p class="text-gray-700 mb-2">Resultados para: <strong>{{ query }}</strong></p>
-    {% endif %}
-
-    {% if projects %}
-        <ul class="space-y-4">
-            {% for project in projects %}
-                <li class="bg-white p-4 rounded-lg shadow">
-                    <h2 class="text-xl font-semibold">{{ project.name }}</h2>
-                    <p class="text-gray-600">{{ project.description }}</p>
-                </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p class="text-gray-500">No se encontraron proyectos que coincidan con la búsqueda.</p>
-    {% endif %}
+    <!-- Contenedor de la cuadrícula -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 bg-bg_gray w-full h-full p-4 rounded-lg">
+        {% for project in projects %}
+            {% include 'projects/project_card.html' with project=project %}
+        {% empty %}
+            <p class="text-gray-500 col-span-3">{% translate "Sin resultados." %}</p>
+        {% endfor %}
+    </div>
 </div>
 {% endblock app_content %}
