--- a/src/templates/profile/notifications.html
+++ b/src/templates/profile/notifications.html
@@ -1,5 +1,5 @@
 {% extends "navigation/navigation.html" %}
-{% load i18n %}
+{% load i18n static %}
 
 {% block app_content %}
 <div class="flex flex-col gap-6 h-full">
